--- a/pubkey-collector/package.json
+++ b/pubkey-collector/package.json
@@ -10,17 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "assert": "^1.4.1",
-    "bn": "^1.0.1",
-    "deep-extend": "^0.6.0",
-    "ethereumjs-lib": "^3.0.0",
-    "http": "0.0.0",
-    "https": "^1.0.0",
-    "moment-timezone": "^0.5.21",
-    "mongodb": "^3.1.1",
-    "nan": "^2.10.0",
-    "secp256k1": "^3.5.0",
-    "sqlite3": "^4.0.2",
-    "web3": "^1.0.0-beta.35",
+    "azure-storage": "2.10.3",
+    "ethereumjs-tx": "2.0.0",
+    "ethereumjs-util": "6.1.0",
+    "net": "1.0.2",
+    "web3": "1.0.0-beta.55",
     "winston": "^3.0.0"
   }
 }
